# neoc

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CODESTYLE.md  CONTRIBUTING.md  Doxyfile.in  INSTALL.md  LICENSE.txt  README.md  appveyor.yml  index.html
include/: CMakeLists.txt  assert.h  ctype.h  errno.h  iso646.h  limits.h  stdbool.h  stdnoreturn.h
src/: CMakeLists.txt  README.md
src/assert/: README.md
src/complex/: README.md
src/ctype/: CMakeLists.txt  README.md  isalnum.c  isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
src/errno/: CMakeLists.txt  README.md  errno.c
src/fenv/: README.md
src/inttypes/: README.md
src/iso646/: README.md
src/limits/: README.md
src/locale/: README.md
src/setjmp/: README.md
src/stdalign/: README.md
src/stdarg/: README.md
src/stdbool/: README.md
src/stddef/: README.md
src/stdnoreturn/: README.md
tests/: CMakeLists.txt
tests/ctype/: CMakeLists.txt  test_ctype.c  test_isalnum.c  test_isalpha.c  test_isblank.c  test_iscntrl.c  test_isdigit.c  test_isgraph.c  test_islower.c  test_isprint.c  test_ispunct.c  test_isspace.c  test_isupper.c  test_isxdigit.c  test_tolower.c  test_toupper.c
tests/errno/: CMakeLists.txt  test_errno.c
tools/: toolchain-avr.cmake
